--- a/src/CSS/contactame.css
+++ b/src/CSS/contactame.css
@@ -2,16 +2,18 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-
 form{
     margin-top: 3rem;
-    margin-left: 18rem;
-    margin-right: 18rem;
+    margin-left: 30%;
+    margin-right: 30%;
+    font-size: 1.5rem;
+}
+
+.form-container{
+    padding: 3rem;
 }
 
 
 
-input{
-    caret-color: rgb(255, 81, 0);
-}
+
 
