--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -2,6 +2,14 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+:root{
+    --color-rosa:#B4016C;
+}
+
+/* .col{
+    border: 1px solid red;
+} */
+
 /* Estandarizar valores rem */
 
 html {
@@ -17,8 +25,17 @@ p {
     font-size: 1.5rem;
 }
 
-/* navBar */
+/* div{
+    border: 1px solid red ;
+} */
+
+/* ======= navBar ======= */
 .navbar {
+    background-color: black;
+    padding: 0px 0px 0px 0px;
+}
+
+header{
     background-color: black;
     padding: 0px 0px 0px 0px;
 }
@@ -30,28 +47,49 @@ p {
 
 .navtext {
     font-size: 1.5rem;
+    margin-right: 3rem;
+    padding-bottom: 1rem;
+}
+
+.nav-link:hover{
+    border-bottom: 1px solid var(--color-rosa);
 }
 
 a {
     text-decoration: none;
 }
 
+ul{
+    list-style: none;
+}
+
+
 h1 {
     font-family: 'Handlee', cursive;
+    font-size: 4rem;
 }
 
 .desarrolladora {
-    font-size: 4rem;
+    font-family: 'Handlee', cursive;
+    font-size: 3.5rem;
+    font-style: normal;
 }
+
 
 .miNombre {
     font-size: 2.5rem;
 }
 
 .desarrolladora,
-.miNombre,
-.miDescripcion {
+.miNombre {
     padding-top: 1.5rem;
+    padding-left: 1rem;
+}
+
+
+
+.miDescripcion{
+    padding-bottom: 1.5rem;
     padding-left: 1rem;
 }
 
@@ -59,17 +97,33 @@ p {
     text-align: justify;
 }
 
+span{
+    color: azure;
+    font-size: 1.6rem;
+}
+
 /* ------ ICONOS ----- */
+
+.bi-geo-fill{
+    margin-left: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
 .bi-linkedin {
     margin-left: 1rem;
+    margin-right: 3rem;
 }
 
 .bi-linkedin:hover {
     color: #6ac3f3;
 }
 
+.bi-github{
+    margin-right: 3rem;
+}
+
 .bi {
-    margin-right: 1.5rem;
     color: azure;
 }
 
@@ -81,6 +135,10 @@ p {
     color: #F4BD46;
 }
 
+.iconos{
+    margin-bottom: 3rem;
+}
+
 /* ------ BOTON CV ------ */
 .button {
     /* tamaño transicion*/
@@ -90,23 +148,22 @@ p {
     --tooltip-color: #fff;
     width: 10rem;
     height: 3.5rem;
-    background-color:#B4016C ;
+    background-color:var(--color-rosa);
     position:relative;
     text-align: center;
     border-radius: 0.45em;
     font-family: "Montserrat";
     font-size: 1.3rem;
+    margin-left: 3rem;
 }
 
-.button::after {
-    position: absolute;
+.button::after { 
     content: '';
     width: 0;
     height: 0;
     border: 10px solid transparent;
     border-top-color: var(--tooltip-color);
-    left: calc(50% - 10px);
-    bottom: calc(100% + var(--gap-between-tooltip-to-button) - 10px);
+    
 }
 
 .button::after,
@@ -117,7 +174,7 @@ p {
 }
 
 .text {
-    display: flex;
+    padding-top: 0.8rem;
     align-items: center;
     justify-content: center;
 }
@@ -173,27 +230,14 @@ p {
     top: 0;
 }
 
-/*  ----- IMAGEN PRESENTACIÓN */
+/*  ===== IMAGEN PRESENTACIÓN ======= */
 img {
-    width: 20rem;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
 
-/* Habilidades */
-
-main {
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-
-h5 {
-    font-weight: 900;
-    padding-bottom: 1rem;
-}
-
 /* carrusel */
-
 .frases {
     padding: 2rem;
 }
