--- a/src/CSS/contactame.css
+++ b/src/CSS/contactame.css
@@ -10,11 +10,21 @@ form{
 }
 
 .form-container{
-    padding: 3rem;
+        background-color:  black;
+        width: auto;
+        height: auto;
+        padding: 30px;
+        margin: 40px;
+        border-radius: 30px;
+        text-align: center;
 }
 
 .form-border{
     border-radius: 1px solid rgb(107, 31, 43);
+}
+
+.texto-form{
+    color: aliceblue;
 }
 
 /* Animación  */
