--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,125 +1,202 @@
-* {
-    font-family: 'Montserrat', sans-serif;
-}
-
+/* Variables */
 :root {
     --color-rosa: #B4016C;
+    --color-negro: #070506;
+    --c-brand-rgb: 248, 54, 145;
+    --c-dark: #303050;
+    --c-body: #636383;
+    --c-light: #f6f6f6;
+    --texto: 'Montserrat', sans-serif;
+    --titulo: 'Handlee', cursive;
+    --transition: all .4s cubic-bezier(.165, .84, .44, 1);
+    --shadow: 0px 15px 40px rgba(0, 0, 0, 0.1);
 }
 
-
-
-html {
-    font-size: 62.5%;
-}
-
+/* Reset & Helpers */
 body {
-    font-size: 16px;
+    font-family: var(--texto);
+    color: var(--c-body);
+    line-height: 1.7;
 }
 
-
-p {
-    font-size: 1.5rem;
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+    font-weight: 700;
+    color: var(--color-rosa);
 }
 
+a {
+    text-decoration: none;
+    transition: var(--transition);
+}
 
-/* ======= navBar ======= */
+a:hover {
+    color: var(--color-rosa);
+}
+
+img {
+    width: 100%;
+}
+
+.section-padding {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.nombre {
+    color: white;
+    font-size: 2.3rem;
+    padding-bottom: 10px;
+}
+
+.setion-title {
+    margin: 0 auto 60px auto;
+}
+
+.setion-title .line {
+    width: 60px;
+    height: 2px;
+    background-color: var(--color-rosa);;
+    display: inline-block;
+}
+
+.section-connector {
+    position: relative;
+}
+
+.section-connector::after {
+    content: '';
+    width: 2px;
+    height: 100px;
+    background-color: var(--color-rosa);
+    position: absolute;
+    top: -50px;
+    left: 50%;
+}
+
+/* Navbar */
 .navbar {
-    background-color: black;
-    padding: 0px 0px 0px 0px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    transition: var(--transition);
 }
 
-header {
-    background-color: black;
-    padding: 0px 0px 0px 0px;
+.navbar.scrolled {
+    padding-top: 7px;
+    padding-bottom: 7px;
+    background-color: var(--color-negro);
+    box-shadow: var(--shadow);
 }
 
-#navbarNav {
-    padding-top: 3rem;
-    padding-left: 4px;
+.navbar-toggler {
+    border-radius: 0;
+    border-color: var(--color-rosa);
 }
 
-.navtext {
-    font-size: 1.8rem;
-    margin-right: 3rem;
-    padding-bottom: 1rem;
+.navbar-toggler-icon{
+    color: var(--color-rosa);
+    background-color: var(--color-rosa);
+}
+
+.navbar-toggler:focus {
+    box-shadow: none;
+}
+
+@media (min-width: 992px) {
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: 16px;
+        padding-left: 16px;
+    }
+}
+
+.navbar .navbar-nav .nav-link {
+    font-weight: 700;
+    color: white;
+    
 }
 
 .nav-link:hover {
     border-bottom: 4px solid var(--color-rosa);
 }
 
-a {
-    text-decoration: none;
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link.active  {
+    color: var(--color-rosa);
 }
 
-ul {
-    list-style: none;
-}
-
-
-h1 {
-    font-family: 'Handlee', cursive;
-    font-size: 4rem;
-}
-
-.desarrolladora {
-    font-family: 'Handlee', cursive;
-    font-size: 3.5rem;
-    font-style: normal;
-}
-
-
-.miNombre {
-    font-size: 2.5rem;
-}
-
-.desarrolladora,
-.miNombre {
-    padding-top: 1.5rem;
-    padding-left: 1rem;
-}
-
-.miDescripcion {
-    padding-bottom: 1.5rem;
-    padding-left: 1rem;
-    font-size: 1.7rem;
-    line-height:3rem;
-
+.navbar-brand {
+    font-size: 14px;
+    font-weight: 700;
 }
 
 p {
     text-align: justify;
 }
 
-span{
-    color: aliceblue;
-    font-size: 2rem;
+/* Btn */
+.btn {
+    padding: 10px 24px;
+    border-radius: 0;
+    border-width: 2px;
+    font-weight: 500;
 }
 
+.btn-brand,
+.btn-brand:focus {
+    background-color: var(--color-rosa);
+    color: white;
+    border-color: var(--color-rosa);
+}
+
+.btn-brand:hover {
+    background-color: transparent;
+    color: var(--color-rosa);
+    border-color: var(--color-rosa);
+}
+
+span{
+    color: white;
+}
+
+.typed-container{
+    margin-top: 35px;
+    margin-bottom: 15px;
+}
+
+.typed{
+    font-family: var(--titulo);
+    font-size: 3rem;
+    font-style: normal;
+    color:#cd7bac;
+}
 
 /* ------ ICONOS ----- */
 
 .bi-geo-fill {
-    margin-left: 1rem;
     margin-top: 2rem;
     margin-bottom: 3rem;
 }
 
 .bi-linkedin {
-    margin-left: 1rem;
-    margin-right: 3rem;
+    margin-right: 1rem;
 }
 
 .bi-linkedin:hover {
     color: #6ac3f3;
 }
 
-.bi-github {
-    margin-right: 3rem;
-}
-
 .bi {
-    color: azure;
+    color: white;
 }
 
 .bi-github:hover {
@@ -134,129 +211,132 @@ span{
     margin-bottom: 3rem;
 }
 
-/* ------ BOTON CV ------ */
-.button {
-    /* tamaño transicion*/
-    --tooltip-height: 35px;
-    --tooltip-width: 90px;
-    --gap-between-tooltip-to-button: 30px;
-    --tooltip-color: #fff;
-    width: 10rem;
-    height: 3.5rem;
-    background-color: var(--color-rosa);
-    position: relative;
-    text-align: center;
-    border-radius: 0.45em;
-    font-family: "Montserrat";
-    font-size: 1.3rem;
-    margin-left: 3rem;
+
+/* Home */
+#home {
+    background-image: url(../img/fondo.png);
+    background-position: right;
+    background-size:cover;
 }
 
-.button::after {
-    content: '';
-    width: 0;
-    height: 0;
-    border: 10px solid transparent;
-    border-top-color: var(--tooltip-color);
-
-}
-
-.button::after,
-.button::before {
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.5s;
-}
-
-.text {
-    padding-top: 0.8rem;
+/* Services */
+.service-icon {
+    font-size: 28px;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
 }
 
-.button-wrapper,
-.text,
-.icon {
+.custom-link {
+    display: inline-flex;
+    align-items: center;
+}
+
+.custom-link span {
+    font-weight: 700;
+}
+
+/* Project */
+.project {
     overflow: hidden;
+    position: relative;
+}
+
+.project .content {
     position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: var(--color-rosa);
     width: 100%;
     height: 100%;
-    left: 0;
-    color: #fff;
-}
-
-.text {
-    top: 0
-}
-
-.text,
-.icon {
-    transition: top 0.5s;
-}
-
-.icon {
-    color: #fff;
-    top: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.icon svg {
-    width: 24px;
-    height: 24px;
+.project img, 
+.project .content {
+    transition: var(--transition);
 }
 
-.button:hover {
-    background: #f4a21d;
-}
-
-.btnFooter {
-    margin-left: 46%;
-    margin-bottom: 1rem;
-}
-
-/* transición entre el texto y el icono */
-.button:hover .text {
-    top: -100%;
-}
-
-.button:hover .icon {
+.project:hover .content {
     top: 0;
 }
 
-/*  ===== IMAGEN PRESENTACIÓN ======= */
-img {
-    width: 100%;
-    padding: 0;
-    margin: 0;
+.project:hover img {
+    transform: translateY(-100%);
 }
 
-/* carrusel */
-.frases {
-    padding: 2rem;
+
+/* Resume */
+.eduexp {
+    position: relative;
+}
+
+.eduexp::before {
+    content: '';
+    height: 100%;
+    width: 1px;
+    background-color: rgba(var(--color-rosa-rgb), 0.4);
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.eduexp::after {
+    content: '';
+    width: 14px;
+    height: 14px;
+    background-color: var(--color-rosa);
+    position: absolute;
+    left: -7px;
+    top: 0;
+}
+
+#contact .form-control {
+    border-radius: 0;
+}
+
+#contact .form-control:focus {
+    box-shadow: none;
+    border-color: var(--color-rosa);
+}
+
+#contact input.form-control {
+    height: 44px;
 }
 
 /* Footer */
 footer {
-    background-color: black;
-    padding: 0px 0px 0px 0px;
+    background-color: var(--color-negro);
+    padding-top: 80px;
 }
 
-.pFooter {
-    padding: 1rem;
+footer h4 {
+    color: white;
+    margin-bottom: 24px;
 }
 
-
-.typed-cursor {
-    display: none;
-    /* Oculta el cursor */
+footer p,
+footer li, 
+footer li a {
+    color: rgba(255,255,255, 0.7);
 }
 
+footer ul {
+    list-style: none;
+    padding: 0;
+}
 
-@media (min-width: 320px) {
-    /* Ajusta el tamaño de fuente para pantallas más grandes */
-    .typed-container {
-        width: auto;
-    }
+footer ul li {
+    margin-top: 6px;
+}
+
+.footer-bottom {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.footer-bottom a {
+    color: var(--color-rosa);
 }
